# redactable

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rust_out
.github/scripts/: check-actions-pinned.sh  check-actions-pinned.test.sh  publish-crates.sh  verify-package-contents.sh
.github/workflows/: ci.yml  release.yml  verify.yml
cargo-fixtures/external-review-contracts/: Cargo.toml
cargo-fixtures/external-review-contracts/src/: explicit_recursion.rs  generated_formatting.rs  generic_policy.rs  key_formatting.rs  main.rs  manual_leaves.rs  nodes.rs  non_clone.rs  observed.rs  public_api_boundary.rs  qualified.rs  qualified_nodes.rs  qualified_recursion.rs  qualified_same_name.rs  recursion_complements.rs
cargo-fixtures/panic-abort-refcell/: Cargo.toml
cargo-fixtures/panic-abort-refcell/src/: main.rs
cargo-fixtures/readme-examples/: Cargo.toml
cargo-fixtures/readme-examples/src/: lib.rs
cargo-fixtures/renamed-policy/: Cargo.toml
cargo-fixtures/renamed-policy/alias-provider/: Cargo.toml
cargo-fixtures/renamed-policy/alias-provider/src/: lib.rs
cargo-fixtures/renamed-policy/src/: main.rs
cargo-fixtures/slog-feature-unification/: Cargo.toml
cargo-fixtures/slog-feature-unification/consumer-normal/: Cargo.toml
cargo-fixtures/slog-feature-unification/consumer-renamed/: Cargo.toml
docs/changelog/: 2026-04-30T0053_holistic_redaction_review_fixes.md
redactable/: Cargo.toml
redactable-derive/: Cargo.toml
redactable-derive/src/: container.rs  crate_paths.rs  debug_impl.rs  derive_enum.rs  derive_struct.rs  fresh_ident.rs  generated_dependency_tests.rs  generics.rs  lib.rs  not_sensitive.rs  policy_guard.rs  redacted_display.rs  sensitive.rs  strategy.rs  transform.rs  types.rs
redactable-derive/src/redacted_display/: bounds.rs  codegen.rs  model.rs  template.rs
redactable/src/: __private.rs  lib.rs  slog.rs  tracing.rs
redactable/src/__private/: field.rs  formatting.rs  kinds.rs  output.rs
redactable/src/policy/: mod.rs  policies.rs  text.rs
redactable/src/redaction/: containers.rs  declared.rs  display.rs  error.rs  escape_hatches.rs  ip_policy.rs  json.rs  mod.rs  output.rs  redact.rs  traits.rs  wrappers.rs
redactable/src/redaction/containers/: cells.rs  ip_address.rs  maps.rs  mod.rs  passthrough.rs  sets.rs  tests.rs  wrappers.rs
redactable/src/redaction/redact/: borrowed.rs  core.rs  leaf.rs  maps.rs  owned.rs  sets.rs  tests.rs
redactable/tests/: followup_cross_crate_ip_alias.rs  followup_generated_identifiers.rs  followup_ip_policy_dispatch.rs  followup_not_sensitive_slog.rs  followup_not_sensitive_tracing.rs  followup_refcell_compatibility.rs  followup_refcell_facade_fallback.rs  followup_refcell_method_ambiguity.rs  followup_refcell_panic_abort.rs  integration_basic.rs  integration_client_scenarios.rs  integration_edge_cases.rs  integration_not_sensitive_output.rs  integration_production_debug.rs  integration_serde_json.rs  integration_slog.rs  integration_tracing.rs  integration_wrappers.rs  phase01_regressions.rs  phase02_policy_negative_matrix.rs  phase02_regressions.rs  phase03_json_failure.rs  round3_consuming_adapters.rs  ui_keyword_alias.rs  ui_not_sensitive.rs  ui_not_sensitive_display.rs  ui_redactable.rs  ui_sensitive.rs  ui_sensitive_display.rs  ui_slog.rs  ui_to_redacted_output.rs  ui_tracing.rs
redactable/tests/integration_basic/: container_traversal.rs  custom_policy.rs  external_types.rs  mixed_fields.rs  not_sensitive_attribute.rs  not_sensitive_derive.rs  not_sensitive_display_derive.rs  not_sensitive_escape_hatches.rs  phantom_data.rs  policy_applicable.rs  scalar_redaction.rs  sensitive_derive.rs  sensitive_display_derive.rs  text_policy.rs  to_redacted_output.rs
redactable/tests/integration_slog/: marker_trait.rs  not_sensitive_json.rs  redacted_json.rs  sensitive_display.rs  sensitive_value.rs  slog_redacted_json.rs
redactable/tests/integration_slog/slog_redacted_json/: basic.rs  containers.rs  custom_policy.rs  edge_cases.rs  enums.rs  nested.rs  security.rs
redactable/tests/phase02_policy_negative_matrix/: matrix.rs
redactable/tests/support/: rustc_json.rs  slog_capture.rs
redactable/tests/ui/: derive_generated_internals_ok.rs  followup_generated_definition_scope_ok.rs  followup_generated_identifier_collisions_ok.rs  legacy_ip_policy_bypasses_rejected.rs  legacy_ip_policy_bypasses_rejected.stderr  not_sensitive_clone_safe_ok.rs  not_sensitive_debug_requires_debug.rs  not_sensitive_debug_requires_debug.stderr  not_sensitive_display_clone_safe_ok.rs  not_sensitive_display_foreign_type_ok.rs  not_sensitive_display_in_container_ok.rs  not_sensitive_display_no_template_ok.rs  not_sensitive_display_not_sensitive_rejected.rs  not_sensitive_display_not_sensitive_rejected.stderr  not_sensitive_display_refcell_clone_rejected.rs  not_sensitive_display_refcell_clone_rejected.stderr  not_sensitive_display_requires_display.rs  not_sensitive_display_requires_display.stderr  not_sensitive_display_sensitive_rejected.rs  not_sensitive_display_sensitive_rejected.stderr  not_sensitive_display_sensitive_value_rejected.rs  not_sensitive_display_sensitive_value_rejected.stderr  not_sensitive_display_template_ok.rs  not_sensitive_display_union_rejected.rs  not_sensitive_display_union_rejected.stderr  not_sensitive_not_sensitive_rejected.rs  not_sensitive_not_sensitive_rejected.stderr  not_sensitive_output_serde_requires_json.rs  not_sensitive_output_serde_requires_json.stderr  not_sensitive_refcell_clone_rejected.rs  not_sensitive_refcell_clone_rejected.stderr  not_sensitive_sensitive_rejected.rs  not_sensitive_sensitive_rejected.stderr  not_sensitive_union_rejected.rs  not_sensitive_union_rejected.stderr  not_sensitive_value_output_rejected.rs  not_sensitive_value_output_rejected.stderr  not_sensitive_variant_attr_rejected.rs  not_sensitive_variant_attr_rejected.stderr  phase01_complete_type_bounds_ok.rs  (+124 more)
scripts/: retag-after-rewrite.sh  strip-cursor-attribution.sh  strip-cursor-msg-filter.sh
test-fixtures/: Cargo.toml
test-fixtures/src/: lib.rs
(+6 files in other folders)
