[workspace]
members = ["redactable", "redactable-derive"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/sformisano/redactable"
documentation = "https://docs.rs/redactable"
homepage = "https://github.com/sformisano/redactable"
authors = ["Salvatore Formisano"]

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }

[patch.crates-io]
redactable-derive = { path = "redactable-derive" }
