[workspace]
members = ["redactable", "redactable-derive", "test-fixtures"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/sformisano/redactable"
documentation = "https://docs.rs/redactable"
homepage = "https://github.com/sformisano/redactable"
authors = ["Salvatore Formisano"]

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }

[patch.crates-io]
redactable-derive = { path = "redactable-derive" }
