[package]
name = "redactable-derive"
version.workspace = true
edition.workspace = true
description = "Derive macros for the redactable crate"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/redactable-derive"
homepage.workspace = true
keywords = ["redaction", "privacy", "security", "macro", "derive"]
categories = ["development-tools"]

[lib]
proc-macro = true

[features]
default = []
# When enabled, generates slog::Value impl for derived types
slog = []
# When enabled, generates tracing marker impls for derived types
tracing = []

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-crate = "2.0"
quote = { workspace = true }
syn = { workspace = true }
