[package]
name = "redactable-test-fixtures"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Non-test fixture types for asserting production Debug behavior"

[dependencies]
redactable = { path = "../redactable" }
serde = { version = "1", features = ["derive"] }
