[package]
name = "redactable-panic-abort-refcell-fixture"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[profile.dev]
panic = "abort"

[dependencies]
redactable = { path = "../../redactable", features = ["ip-address", "slog", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
