[workspace]

[package]
name = "redactable-readme-examples"
version = "0.0.0"
edition = "2024"
rust-version = "1.97"
publish = false

[dependencies]
redactable = { path = "../../redactable", features = ["json", "slog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = "2.8"
tracing = "0.1"
valuable = { version = "0.1", features = ["derive"] }
